@@ -15,7 +15,10 @@
  */
 package io.micronaut.management.endpoint.beans.impl;
 
+import io.micronaut.context.Qualifier;
 import io.micronaut.context.annotation.Requires;
+import io.micronaut.core.annotation.NonNull;
+import io.micronaut.core.annotation.Nullable;
 import io.micronaut.inject.BeanDefinition;
 import io.micronaut.management.endpoint.beans.BeanDefinitionData;
 import io.micronaut.management.endpoint.beans.BeansEndpoint;
@@ -24,7 +27,6 @@ import jakarta.inject.Singleton;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * The default {@link BeanDefinitionData} implementation. Returns a {@link Map} with
@@ -51,23 +53,40 @@ public class DefaultBeanDefinitionData implements BeanDefinitionData<Map<String,
         beanData.put("dependencies", getDependencies(beanDefinition));
         beanData.put("scope", getScope(beanDefinition));
         beanData.put("type", getType(beanDefinition));
+        beanData.put("qualifier", getQualifier(beanDefinition));
 
         return beanData;
+    }
+
+    /**
+     * Obtains the qualifier.
+     * @param beanDefinition The bean definition.
+     * @return The qualifier
+     */
+    @Nullable
+    protected String getQualifier(@NonNull BeanDefinition<?> beanDefinition) {
+        Qualifier<?> q = beanDefinition.getDeclaredQualifier();
+        if (q != null) {
+            return q.toString();
+        }
+        return null;
     }
 
     /**
      * @param beanDefinition A bean definition
      * @return A list of dependencies for the bean definition
      */
-    protected List getDependencies(BeanDefinition<?> beanDefinition) {
-        return beanDefinition.getRequiredComponents().stream().map(Class::getName).sorted().collect(Collectors.toList());
+    @NonNull
+    protected List<String> getDependencies(@NonNull BeanDefinition<?> beanDefinition) {
+        return beanDefinition.getRequiredComponents().stream().map(Class::getName).sorted().toList();
     }
 
     /**
      * @param beanDefinition A bean definition
      * @return The scope for the bean
      */
-    protected String getScope(BeanDefinition<?> beanDefinition) {
+    @Nullable
+    protected String getScope(@NonNull BeanDefinition<?> beanDefinition) {
         return beanDefinition.getScopeName().orElse(null);
     }
 
@@ -75,7 +94,8 @@ public class DefaultBeanDefinitionData implements BeanDefinitionData<Map<String,
      * @param beanDefinition A bean definition
      * @return The type of the bean as String
      */
-    protected String getType(BeanDefinition<?> beanDefinition) {
+    @NonNull
+    protected String getType(@NonNull BeanDefinition<?> beanDefinition) {
         return beanDefinition.getBeanType().getName();
     }
 }
